--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Lora|Source+Sans+Pro:400,700" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rasa&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -22,18 +25,26 @@
 
         <!-- Add your site or application content here -->
         <section class="flex-container">
-            <header>Header</header>
-            <main>Main</main>
+            <header>
+                <h1>Hi, I'm Caiti!</h1>
+            </header>
+            <main>
+                <h2>I'm  <span> new to coding </span> and it's definitely overwhelming!</h2>
+            </main>
             <div id="div-1" class="flex-items">
-                Div 1
+                <p>I started taking coding classes in college, and failed miserably.</p>
             </div>
             <div id="div-2" class="flex-items">
-                Div 2
+                <p>Dropped the idea of computer science until...</p>
             </div>
             <div id="div-3" class="flex-items">
-                Div 3
+                <p>My interest was sparked again and I decided to give it another shot!</p>
             </div>
-            <footer>Footer</footer>
+            <footer>
+                <img src="img/instagram-logo.png" alt="Instagram Logo">
+                <img src="img/tik-tok.png" alt="TikTok Logo">
+                <img src="img/twitter-sign.png" alt="Twitter Logo">
+            </footer>
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
