Added social media links to icons

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <p>My interest was sparked again and I decided to give it another shot!</p>
             </div>
             <footer>
-                <img src="img/instagram-logo.png" alt="Instagram Logo">
-                <img src="img/tik-tok.png" alt="TikTok Logo">
-                <img src="img/twitter-sign.png" alt="Twitter Logo">
+                <a href="https://www.instagram.com/caitiwiesner/" target="_blank" rel="noopener"><img src="img/instagram-logo.png" alt="Instagram Logo"></a>
+                <a href="https://www.tiktok.com/@caitiwiesner?lang=en" target="_blank" rel="noopener"><img src="img/tik-tok.png" alt="TikTok Logo"></a>
+                <a href="https://twitter.com/caiti_wiesner" target="_blank" rel="noopener"><img src="img/twitter-sign.png" alt="Twitter Logo"></a>
             </footer>
         </section>
 
